--- a/tools/engineSearch.html
+++ b/tools/engineSearch.html
@@ -5,23 +5,24 @@
 	<title>Engine Search</title>
 	<script src="engines.js"></script>
 	<script>
-engines = engines.engines;
+engines = engines.engines;//this may look silly, but there are also stage data in the file, not used at the moment.
 var change = function(target,value){
 	document.getElementById(target).value = value;
 };
+var foundIndex = [];
 var update = function(){
+	foundIndex = [];
 	var maxMass = Number(document.getElementById("mass").value);
 	var minThrust = Number(document.getElementById("thrust").value)*1000;//kilo newtons
 	var minVelocity = Number(document.getElementById("velocity").value);
 	var out = "<tr><th>Name</th><th>Mass (kg)</th><th>Isp (s)</th><th>Thrust (kN)</th><th>Isp SL (s)</th><th>Thrust SL (kN)</th><th>Fuel</th><th>Oxidizer</th><th>Length (m)</th><th>Country</th></tr>";
-	var foundFlag = false;
 	for(var i=0;i<engines.length;i++){
 		if(
 			engines[i].mass < maxMass
 			&& engines[i].thrustVacuum > minThrust
 			&& engines[i].isp > minVelocity
 		){
-			foundFlag = true;
+			foundIndex.push(i);
 			out += "<tr><td><a href='"+engines[i].source+"'>"+engines[i].name+"</a></td><td>"+engines[i].mass+"</td><td>"+engines[i].isp+"</td><td>"+engines[i].thrustVacuum/1000+"</td><td>";
 			if(engines[i].ispGround){out += engines[i].ispGround};
 			out += "</td><td>";
@@ -38,11 +39,63 @@ var update = function(){
 		};
 	};
 	var warnings = "";
-	if(!foundFlag){
+	if(!foundIndex.length){
 		warnings = "No engines found matching the parameters";
 	};
 	document.getElementById("warnings").innerHTML = warnings;
 	document.getElementById("list").innerHTML = out;
+};
+var draw = function(){
+	var plotInfo = document.getElementById("plotInfo").elements;
+	var plotSize = Number(plotInfo.plotSize.value);
+	var plotType = Number(plotInfo.plotType.value);
+	var plot = document.getElementById("plot");
+	plot.width = plot.height = plotSize;
+	var xaxis = [];
+	var yaxis = [];
+	var smallestX;
+	var smallestY;
+	var largestX;
+	var largestY;
+	if(plotType === 0){
+		smallestX = largestX = engines[foundIndex[0]].mass;
+		smallestY = largestY = engines[foundIndex[0]].thrustVacuum;
+		for(var i=0;i<foundIndex.length;i++){
+			xaxis.push(engines[foundIndex[i]].mass);
+			yaxis.push(engines[foundIndex[i]].thrustVacuum);
+		};
+	}
+	else if(plotType === 1){
+		smallestX = largestX = engines[foundIndex[0]].mass;
+		smallestY = largestY = engines[foundIndex[0]].isp;
+		for(var i=0;i<foundIndex.length;i++){
+			xaxis.push(engines[foundIndex[i]].mass);
+			yaxis.push(engines[foundIndex[i]].isp);
+		};
+	}
+	else{
+		smallestX = largestX = engines[foundIndex[0]].isp;
+		smallestY = largestY = engines[foundIndex[0]].thrustVacuum;
+		for(var i=0;i<foundIndex.length;i++){
+			xaxis.push(engines[foundIndex[i]].isp);
+			yaxis.push(engines[foundIndex[i]].thrustVacuum);
+		};
+	};
+	for(var i=1;i<xaxis.length;i++){
+		if(xaxis[i] < smallestX){
+			smallestX = xaxis[i];
+		}
+		else if(xaxis[i] > largestX){
+			largestX = xaxis[i];
+		};
+		if(yaxis[i] < smallestY){
+			smallestY = yaxis[i];
+		}
+		else if(yaxis[i] > largestY){
+			largestY = yaxis[i];
+		};
+	};
+	//so the plot has to be scaled.
 };
 	</script>
 	<style>
@@ -147,15 +200,17 @@ body{
 <div class="container">
 	Plot:
 	<br>
-	<input type="radio" name="plotType" value="0" checked>Mass - Thrust<br>
-	<input type="radio" name="plotType" value="1">Mass - Isp<br>
-	<input type="radio" name="plotType" value="2">Isp Thrust<br>
-	<br>
-	Size:
-	<br>
-	<input type="radio" name="plotSize" value="512" checked>512 x 512<br>
-	<input type="radio" name="plotSize" value="1024">1024 x 1024<br>
-	<input type="radio" name="plotSize" value="2048">2048 x 2048<br>
+	<form id="plotInfo">
+		<input type="radio" name="plotType" value="0" checked>Mass - Thrust<br>
+		<input type="radio" name="plotType" value="1">Mass - Isp<br>
+		<input type="radio" name="plotType" value="2">Isp Thrust<br>
+		<br>
+		Size:
+		<br>
+		<input type="radio" name="plotSize" value="512" checked>512 x 512<br>
+		<input type="radio" name="plotSize" value="1024">1024 x 1024<br>
+		<input type="radio" name="plotSize" value="2048">2048 x 2048<br>
+	</form>
 	<br>
 	<button onclick="draw()">Draw</button>
 </div><br>
