migrated learn page to new include system
Former-commit-id: f8e77de7f1d3a74888124c4e1d5b30567f4d8262 [formerly c0d97e36ae7b8ff6b12b99b6715a4ef5f02d15a2]
Former-commit-id: bbfda0540a8e8ecc8dd47d2fc05b1dbc1e797979

--- a/learn.html
+++ b/learn.html
@@ -26,10 +26,10 @@ of the Moon."
 	<section id="tryit">
 		<div class="outerDiv">
 			<div class="innerDiv">
-{%include suborbital.html%}
+{%include_relative _includes/learn/suborbital.html%}
 			</div>
 		</div><!--end outer div-->
-{%include lunarElevator.html%}
+{%include_relative _includes/learn/lunarElevator.html%}
 		<div class="outerDiv">
 			<div class="innerDiv">
 				<h2>The Rocket Equation</h2>
@@ -215,7 +215,7 @@ of the Moon."
 		</div>
 	</div>
 	<div class="outerDiv">
-{%include spaceJStableGenerated.html%}
+{%include_relative _includes/learn/spaceJStableGenerated.html%}
 		<div class="innerDiv">
 			<a href="http://www.gnu.org/licenses/">
 				<p>All calculator scripts are released under the GPL version 3</p>
