--- a/index.html
+++ b/index.html
@@ -30,17 +30,20 @@ of the Moon."
 			<article class="innerDiv under-tabs tabcontent" id="intro">
 				<h1>Realistic Lunar Colony, Coming Online</h1>
 					<p>
-								This project is building a series of virtual colonies on the Moon. They will be
-								richly detailed and interactive presentations that are entirely
-								plausible, technically and scientifically.
-								They will examine all the questions, consider all the implications. When humanity
-								undertakes ventures on the scale of space settlement, it matters a great deal
-								how many people have given it real thought beforehand. These colonies serve
-								that purpose.
+						This project is building a series of virtual colonies on the Moon. They will be
+						richly detailed and interactive presentations that are entirely
+						plausible, technically and scientifically.
+						They will examine all the questions, consider all the implications. When humanity
+						undertakes ventures on the scale of space settlement, it matters a great deal
+						how many people have given it real thought beforehand. These colonies serve
+						that purpose.
 					</p>
 					<p>
-					 The first colony created will show a full town with a population of 20,000. It will have developed industries and facilities, spacious beautiful architecture, transport systems moving high volumes of people and cargo around the Moon and the solar system.
-					It shows what happens just beyond the tipping point, when technology enables a space boom. To evaluate the importance of space exploration, this is the stage that must be understood.
+						The first colony created will show a full town with a population of 20,000. 
+						It will have developed industries and facilities, spacious beautiful architecture, 
+						transport systems moving high volumes of people and cargo around the Moon and the solar system.
+						It shows what happens just beyond the tipping point, when technology enables a space boom. 
+						To evaluate the importance of space exploration, this is the stage that must be understood.
 					</p>
 					<p>
 						The next two colonies work outwards from there... forwards to the city that
@@ -89,11 +92,15 @@ of the Moon."
 				</article>
 			<article class="innerDiv under-tabs tabcontent" id="blog">
 				<iframe class="goodHeight" src="blogMain.html" width="100%" style="border:none;"></iframe>
-		<!--<script>var iframes = iFrameResize(null, '#iFrameResizer0');</script>-->
 			</article>
 			<article class="innerDiv under-tabs tabcontent" id="comments">
 				<h1>This will take some work...</h1>
-				<p>This site has been written by someone who doesn't do it for a living or anything, and learned how mostly as she went along. Putting in a comment section that isn't littered with spam and doesn't involve a paid service or a bunch of poorly targeted ads means learning how to work with a database. With the traffic this site currently has, it should be manageable to moderate comments and maintain the database myself, however this is another new thing i have to learn. For now, you can comment at the <a target="_blank" href="http://moonwards1.blogspot.com/">Blogger blog</a>, or on the <a href="http://www.moonwards.com/forum/">forum</a>.
+				<p>
+					This site has been written by someone who doesn't do it for a living or anything, and learned how mostly as she went along. 					Putting in a comment section that isn't littered with spam and doesn't involve a paid service 
+					or a bunch of poorly targeted ads means learning how to work with a database. 
+					With the traffic this site currently has, it should be manageable to moderate comments and maintain the database myself, 						however this is another new thing i have to learn. 
+					For now, you can comment at the <a target="_blank" href="http://moonwards1.blogspot.com/">Blogger blog</a>, 
+					or on the <a href="http://www.moonwards.com/forum/">forum</a>.
 				</p>
 				<br>
 			</article>
@@ -104,4 +111,3 @@ of the Moon."
 </div>
 <script type="text/javascript" src="js/RSSparserMiha.js"></script>
 <script type="text/javascript" src="js/TabJS.js"></script>
- <!--<script type="text/javascript" src="js/iframeResizer.min.js"></script>-->
