--- a/machines2.html
+++ b/machines2.html
@@ -5,6 +5,6 @@ description: "Machines designed for a Moon base. Solar thermal power plants, nuc
 headline: "Machines for a Lunar Economy"
 intro: "These sections focus on the machines that come to the fore once you've built the first permanent habs. To make it all work you have to scale up as quickly as possible so you have products you can sell, and lower your costs as much as possible by using local resources to the maximum. These machines achieve that."
 ---
-{% include machinesPower.html %}
-{% include machinesMining.html %}
-{% include machinesTransport.html %}
+{% include_relative _includes/machines/machinesPower.html %}
+{% include_relative _includes/machines/machinesMining.html %}
+{% include_relative _includes/machines/machinesTransport.html %}
