updated some info
Former-commit-id: 6d3582de5e522bf594f6596b4fbaf3fbf77e9ad7

--- a/project.html
+++ b/project.html
@@ -70,7 +70,6 @@ description: "Why it is important to colonize the Moon, and to plan publicly how
 					the project files. They are under the Gnu Public License
 					v 3. If you are a GitHub member, you comment on some aspect of the
 					project there by clicking the Issues tab and opening a new issue.
-					<br>Note the repo is in line for a major revamp in about two months.
 				</figcaption>
 		</div>
 	</figure>
@@ -137,7 +136,7 @@ description: "Why it is important to colonize the Moon, and to plan publicly how
 							</p>
 							<p>
 				As I have a lot of time this early in my life, the ambition is to learn as much as possible. Unicycling? No problem.
-				Here at Moonwards, I provide content to the <a href="http://moonwards.com/learn.html">learn page</a>, including a far from finished game.
+				Here at Moonwards, I provide content to the <a href="http://moonwards.com/learn.html">learn page</a>
 				Mostly however, I discuss new ideas with Kim.
 							</p>
 				</div>
