migrated the modelProxy system to Jekyll. TODO: give them sensible names
Former-commit-id: 80a1d775736c773dba4f65a23015074e54093ebe

--- a/modelProxy/modelProxy16.html
+++ b/modelProxy/modelProxy16.html
@@ -1,42 +1,6 @@
 ---
-layout: null
+layout: modelProxy
 permalink: /modelProxy16.html
+modelPath: https://sketchfab.com/models/1c4641c9a7f74a02b5522a99dac8c92e/embed?autostart=1
+linkImagePath: img/thumb/ATHroverButton.jpg
 ---
-
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<style>
-.overlay {
-	border: 5px solid transparent;
-	border-width: 5px;
-	border-radius: 5px;
-}
-.overlay:hover {
-	border-style: solid;
-	border-width: 5px;
-	border-color: rgb(255,200,0);
-	border-radius: 5px;
-	cursor: pointer;
-	text-align: center;
-}
-a {
-	background-color: rgba(0,0,0,0.6);
-	text-decoration: none;
-	color: rgb(247,247,220);
-	font-family: sans-serif;
-	font-size: 14px;
-	line-height: 18px;
-}
-</style>
-</head>
-<body>
-<a href="https://sketchfab.com/models/1c4641c9a7f74a02b5522a99dac8c92e/embed
-?autostart=1" frameborder="0" allowfullscreen
-mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
-<img src="img/thumb/ATHroverButton.jpg" width="80%"
- class="overlay" alt="Link to 3D model">
-</a>
-</body>
-</html>
