--- a/modelProxy/modelProxy19.html
+++ b/modelProxy/modelProxy19.html
@@ -1,42 +1,6 @@
 ---
-layout: null
+layout: modelProxy
 permalink: /modelProxy19.html
+modelPath: https://sketchfab.com/models/4299c52226ba425a9a4bb079f9c093ba/embed?autostart=1
+linkImagePath: img/thumb/DustroasterButton.jpg
 ---
-
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<style>
-.overlay {
-	border: 5px solid transparent;
-	border-width: 5px;
-	border-radius: 5px;
-}
-.overlay:hover {
-	border-style: solid;
-	border-width: 5px;
-	border-color: rgb(255,200,0);
-	border-radius: 5px;
-	cursor: pointer;
-	text-align: center;
-}
-a {
-	background-color: rgba(0,0,0,0.6);
-	text-decoration: none;
-	color: rgb(247,247,220);
-	font-family: sans-serif;
-	font-size: 14px;
-	line-height: 18px;
-}
-</style>
-</head>
-<body>
-<a href="https://sketchfab.com/models/4299c52226ba425a9a4bb079f9c093ba/embed
-?autostart=1" frameborder="0" allowfullscreen
-mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
-<img src="img/thumb/DustroasterButton.jpg" width="90%"
- class="overlay" alt="Link to 3D model">
-</a>
-</body>
-</html>
