--- a/modelProxy/modelProxy24.html
+++ b/modelProxy/modelProxy24.html
@@ -1,33 +1,6 @@
 ---
-layout: null
+layout: modelProxy
 permalink: /modelProxy24.html
+modelPath: https://sketchfab.com/models/a9bba843db9046a9adc97172b056f45b/embed?autostart=1
+linkImagePath: img/thumb/LalandeCraterButton.jpg
 ---
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<style>
-.overlay {
-	border: 5px solid transparent;
-	border-width: 5px;
-	border-radius: 5px;
-}
-.overlay:hover {
-	border-style: solid;
-	border-width: 5px;
-	border-color: rgb(255,200,0);
-	border-radius: 5px;
-	cursor: pointer;
-	text-align: center;
-}
-</style>
-</head>
-<body>
-<a href="https://sketchfab.com/models/a9bba843db9046a9adc97172b056f45b/embed
-?autostart=1" frameborder="0" allowfullscreen
-mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
-<img src="img/thumb/LalandeCraterButton.jpg" width="90%"
- class="overlay" alt="Link to 3D model">
-</a>
-</body>
-</html>
