rename modelProxy files
Former-commit-id: aeb0f79f39449bee7a566e302e2ab664fcd5aa46 [formerly d4f9e25a28e64e4e72c8e7140cccf3c6308022fa]
Former-commit-id: b4a9f440c9c152e7cf3b7a978befa75fd0465147

--- a/modelProxy/ATHLETErover.html
+++ b/modelProxy/ATHLETErover.html
@@ -1,6 +1,6 @@
 ---
 layout: modelProxy
-permalink: /modelProxy16.html
+permalink: /ATHLETErover.html
 modelPath: https://sketchfab.com/models/1c4641c9a7f74a02b5522a99dac8c92e/embed?autostart=1
 linkImagePath: img/thumb/ATHroverButton.jpg
 ---
