--- a/modelProxy/AtriumCutaway.html
+++ b/modelProxy/AtriumCutaway.html
@@ -1,6 +1,6 @@
 ---
 layout: modelProxy
-permalink: /modelProxy11.html
+permalink: /AtriumCutaway.html
 modelPath: https://sketchfab.com/models/de6fa972ff324aaab82ef9dd744efa45/embed?autostart=1
 linkImagePath: img/thumb/AtriumCutawayButton.jpg
 ---
