--- a/modelProxy/AtriumRadBlind.html
+++ b/modelProxy/AtriumRadBlind.html
@@ -1,6 +1,6 @@
 ---
 layout: modelProxy
-permalink: /modelProxy12.html
+permalink: /AtriumRadBlind.html
 modelPath: https://sketchfab.com/models/0f3f042a7561432bab21bd315742aa29/embed?annotation=1&amp;autostart=1
 linkImagePath: img/thumb/AtriumRadBlindButton.jpg
 ---
