--- a/modelProxy/BasaltFiberProd.html
+++ b/modelProxy/BasaltFiberProd.html
@@ -1,6 +1,6 @@
 ---
 layout: modelProxy
-permalink: /modelProxy17.html
+permalink: /BasaltFiberProd.html
 modelPath: https://sketchfab.com/models/62039eac11d944378a9a7bbafd6087fa/embed?autostart=1
 linkImagePath: img/thumb/BasaltFiberProdButton.jpg
 ---
