--- a/modelProxy/DomeCity.html
+++ b/modelProxy/DomeCity.html
@@ -1,6 +1,6 @@
 ---
 layout: modelProxy
-permalink: /modelProxy14.html
+permalink: /DomeCity.html
 modelPath: https://sketchfab.com/models/37e0857d61614e47a7e4d81be072d19d/embed?annotation=1&amp;autostart=1
 linkImagePath: img/thumb/DomeCityButton.jpg
 ---
