--- a/modelProxy/GalleryCutaway.html
+++ b/modelProxy/GalleryCutaway.html
@@ -1,6 +1,6 @@
 ---
 layout: modelProxy
-permalink: /modelProxy13.html
+permalink: /GalleryCutaway.html
 modelPath: https://sketchfab.com/models/d7f2c0d87ef1419db1bd4308ba3d0a45/embed?annotation=1&amp;autostart=1
 linkImagePath: img/thumb/GalleryCutawayButton.jpg
 ---
