--- a/modelProxy/HangarCutaway.html
+++ b/modelProxy/HangarCutaway.html
@@ -1,6 +1,6 @@
 ---
 layout: modelProxy
-permalink: /modelProxy20.html
+permalink: /HangarCutaway.html
 modelPath: https://sketchfab.com/models/1e03189977d44317af0d9a572b9d55ab/embed?autostart=1
 linkImagePath: img/thumb/HangarCutawayButton.jpg
 ---
