--- a/modelProxy/LalandeCrater.html
+++ b/modelProxy/LalandeCrater.html
@@ -1,6 +1,6 @@
 ---
 layout: modelProxy
-permalink: /modelProxy24.html
+permalink: /LalandeCrater.html
 modelPath: https://sketchfab.com/models/a9bba843db9046a9adc97172b056f45b/embed?autostart=1
 linkImagePath: img/thumb/LalandeCraterButton.jpg
 ---
