--- a/modelProxy/MIPstation.html
+++ b/modelProxy/MIPstation.html
@@ -1,6 +1,6 @@
 ---
 layout: modelProxy
-permalink: /modelProxy18.html
+permalink: /MIPstation.html
 modelPath: https://sketchfab.com/models/1621e5f3283840b6b02385cfd8ec98dd/embed?autostart=1
 linkImagePath: img/thumb/MIPstationButton.jpg
 ---
