--- a/modelProxy/PolarHab.html
+++ b/modelProxy/PolarHab.html
@@ -1,6 +1,6 @@
 ---
 layout: modelProxy
-permalink: /modelProxy21.html
+permalink: /PolarHab.html
 modelPath: https://sketchfab.com/models/25c02049ef0041218f6866cf0561b543/embed?autostart=1
 linkImagePath: img/thumb/PolarHabCutawayButton.jpg
 ---
