--- a/lalande.html
+++ b/lalande.html
@@ -217,7 +217,7 @@ is no place else in the solar system (beyond Earth) that has a fan page like thi
 <section class="frameContainer" id="CraterModel">
  <div class="framePairTop">
   <figure class="framewrap frame16x9">
-						<iframe src="modelProxy24.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+						<iframe src="LalandeCrater.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 						</iframe>
 		</figure>
  </div>
