--- a/modelProxy/DustRoaster.html
+++ b/modelProxy/DustRoaster.html
@@ -1,6 +1,6 @@
 ---
 layout: modelProxy
-permalink: /modelProxy19.html
+permalink: /DustRoaster.html
 modelPath: https://sketchfab.com/models/4299c52226ba425a9a4bb079f9c093ba/embed?autostart=1
 linkImagePath: img/thumb/DustroasterButton.jpg
 ---
