--- a/modelProxy/NISTcrane.html
+++ b/modelProxy/NISTcrane.html
@@ -1,6 +1,6 @@
 ---
 layout: modelProxy
-permalink: /modelProxy15.html
+permalink: /NISTcrane.html
 modelPath: https://sketchfab.com/models/37e0857d61614e47a7e4d81be072d19d/embed?autostart=1
 linkImagePath: img/thumb/NISTcraneButton.jpg
 ---
