--- a/tools/pelletSimulator.html
+++ b/tools/pelletSimulator.html
@@ -1,36 +1,7 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>Pellet Simulator</title>
-		<style>
-body{
-	font-family:Arial,Helvetica,sans-serif;
-	background-color:#202030;
-}
-.wrapper{
-	margin-left:5%;
-	margin-right:5%;
-	padding:20px;
-}
-.container{
-	display:inline-block;
-	-webkit-border-radius:10px;
-	-moz-border-radius:10px;
-	border-radius:10px;
-	border-style:solid;
-	border-width:1px;
-	border-color:black;
-	padding:10px;
-	margin:5px;
-}
-#main{
-	background-color:#F6F6F0;
-	-webkit-border-radius:10px;
-	-moz-border-radius:10px;
-	border-radius:10px;
-	box-shadow:5px 5px 4px #000000;
-}
+---
+layout: toolTemplate
+title: Pellet Simulator
+---
 		</style>
 	</head>
 	<body>
@@ -59,19 +30,44 @@ var canvas = document.getElementById("canvas");
 var ctx = canvas.getContext("2d");
 var fps;
 var pellets = [];
-var newPellets = [];
+var oldPosi = [];
 function update(){
 	var form = documentGetElementById("controls").elements;
-	fps = Math.floor(Number(form.physics.value)/Number(form.graphics.value));
+	var gnum = function(field){
+		return Number(form[field].value);
+	};
+	fps = Math.floor(gnum("physics")/gnum("graphics"));
 	pellets = [];
-	for(var i = 0;i < Number(form.pellets.value);i++){
-		pellets.push(/**/);
+	var velocity0 = gnum("velocity0");
+	var velocity1 = gnum("velocity1");
+	var direction = Math.PI * gnum("direction")/180;
+	var radius = gnum("radius");
+	var argument = Math.PI *gnum("argument")/180;
+	if(form.origin.value === "earth"){
+		x = Math.cos(argument) * radius /* - EARTH_TO_BALANCE*/;
+	}
+	else{
+		x = Math.cos(argument) * radius  /* + BALANCE_TO_MOON*/;
+	};
+	var y = Math.sin(argument) * radius;
+	for(var i = 0;i < gnum("pellets");i++){
+		var pellet = {};
+		var velocity = velocity0 + (velocity1 - velocity0)*i/(gnum("pellets")-1);
+		pellet.vx = Math.cos(direction) * velocity;
+		pellet.vx = Math.sin(direction) * velocity;
+		pellet.y = y;
+		pellet.x = x;
+		oldPosu.push([x,y]);
+		pellets.push(pellet);
 	};
 	mainLoop = setInterval(
 		function(){
-			pellets = newPellets;
 			physics();
 			draw();
+			for(var i = 0;i < pellets.length;i++){
+				oldPosi[i][0] = pellets[i].x;
+				oldPosi[i][1] = pellets[i].y;
+			};
 		},
 		fps
 	)
