--- a/modelProxy/Phase1_Overview.html
+++ b/modelProxy/Phase1_Overview.html
@@ -1,6 +1,6 @@
 ---
 layout: modelProxy
-permalink: /Phase1_overview.html
+permalink: /Phase1_Overview.html
 modelPath: https://sketchfab.com/models/a365dc23ee6349b8997d1585b733e635/embed?autostart=1
 linkImagePath: img/thumb/Phase1_Overview.jpg
 ---
