default back to normal
Former-commit-id: af65f4515741257065bfec01bb8e546df4472f05 [formerly d032dc4231e595a9450a451f17afce3df35f6e8f]
Former-commit-id: 413107c55adabc223ced3a8e13afd39e131226a5

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: defaultMinimal
 title: Moonwards Virtual Moon Colony Project
 stylesheet: "css/main.nest.sass.css"
 description: "A realistic virtual lunar colony, showing how space
