small stuff on the bus
Former-commit-id: d1151de9683dfcc08bbf309921efd3f062afbd67

--- a/404.html
+++ b/404.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
+	{% include commonHeadElements.html %}
 	<title>Page Not Found</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/404css.nest.sass.css">
 </head>
 <body>
