--- a/lalande.html
+++ b/lalande.html
@@ -91,7 +91,7 @@ is no place else in the solar system (beyond Earth) that has a fan page like thi
 							</p>
 						</span>
 					</div>
-					<figure class="pix" id="nightTemp" style="max-width: 750px;">
+					<figure class="pix" id="nightTemp" style="max-width: 750px;" id="LalSoilTemp">
 						<img src="img/LalandeTempDiff.jpg">
 						<figcaption>Map of nighttime soil temperatures by the Lunar Reconnaissance Orbiter Diviner instrument. Each pixel the instrument records is about 200 m across.
 						</figcaption>
